# Copyright (c) 2022 The Bitcoin developers

[package]
name = "chronik-db"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "MIT"

[dependencies]
abc-rust-error = { path = "../abc-rust-error" }
abc-rust-lint = { path = "../abc-rust-lint" }

bitcoinsuite-core = { path = "../bitcoinsuite-core" }
bitcoinsuite-slp = { path = "../bitcoinsuite-slp" }

chronik-util = { path = "../chronik-util" }

# Map that goes in both directions
bimap = "0.6"

# Efficient byte strings, with ref counted substrings
bytes = "1.4"

# A variant of a Cuckoo Filter whose size automatically scales as necessary
scalable_cuckoo_filter = { version = "0.2", features = ["serde_support"] }

# En-/decode byte strings from/to hex
hex = "0.4"

# Extends iterators with handy helpers
itertools = "0.10"

# Compact and fast serialization
postcard = { version = "1.0", features = ["alloc"] }

# Fast & simple hashing algo
seahash = "4.1"

# Serialize structs
serde = { version = "1.0", features = ["derive"] }

# Derive error enums
thiserror = "1.0"

# Sort topologically
topo_sort = "0.4"

rand = { version = "0.8", features = ["serde1"] }
rand_chacha = { version = "0.3", features = ["serde1"] }
rayon = "1.8"
quick_cache = "0.4"
# Least-recently-used cache
lru = "0.11"

# Key-value database
rocksdb = { version = "0.21" }

[dev-dependencies]
# Colorful diffs for assertions
pretty_assertions = "1.0"

# Temporary directory that's deleted when dropped
tempdir = "0.3"

# Simple RNG
fastrand = "2.0"
